routing/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-app-gateway
  namespace: demo
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      metallb.universe.tf/address-pool: metallb-ip-pool
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
