routing/gateway-api/route-to-user.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app-route-user-specific
spec:
  parentRefs:
    - name: demo-app-gateway
  rules:
    #  Backend API 
    - matches:
      - headers:
        - name: x-user
          type: Exact
          value: "jonathan"
        path:
          type: RegularExpression
          value: /api/.*
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: x-version
                value: "1.0.0"
      backendRefs:
        - name: backend-v1
          port: 3000

    - matches:
        - path:
            type: RegularExpression
            value: /api/.*
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: x-version
                value: "2.0.0"
      backendRefs:
        - name: backend-v2
          port: 3000


    #  Monitor /status
    - matches:
        - path:
            type: PathPrefix
            value: /status
      backendRefs:
        - name: monitor
          port: 8000

    #  SPA catch-all
    - matches:
      
        - path:
            type: PathPrefix
            value: /app
      backendRefs:
        - name: frontend
          port: 80
